Updating readme and adding BlogGatherers